trying to fix spacing issues

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ html {
   align-items: center;
   color: #ebdbb2;
   font-family: 'Ubuntu Mono', monospace;
-  font-size: 18px;
+  font-size: 12px;
   height: 100%;
   margin: 0;
 }
@@ -56,26 +56,26 @@ ul {
 
 li:first-child {
   font-weight: bold;
-  line-height: 2em;
+  line-height: 1em;
   color: #ad8ee6;
 }
 
 #terminal {
   background-color: #1f1f1f;
   box-sizing: border-box;
-  width: 450px;
+  width: 700px;
   height: 450px;
   box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.6);
   border-radius: 4px;
-  padding: 1em;
+  padding: 1.5em 0em;
 }
 
 #terminal-content {
   box-sizing: border-box;
   width: 100%;
   height: 100%;
-  overflow-y: auto;
-  padding: 1em;
+  overflow: scroll;
+  padding: 0em 1.5em;
   color: #d4d4d4;
 
   /* Hide scrollbar for IE, Edge and Firefox */
@@ -86,6 +86,120 @@ li:first-child {
 /* Hide scrollbar for Chrome, Safari and Opera */
 #terminal-content::-webkit-scrollbar {
   display: none;
+}
+
+/**
+* Prompt Styling
+*/
+
+.prompt {
+  display: flex;
+}
+
+#prompt-input {
+  background-color: transparent;
+  border: none;
+  color: var(--fg);
+  flex-grow: 1;
+  padding: 0.5em;
+  font-family: var(--fontFamily);
+  font-size: var(--fontSize);
+}
+
+#prompt-input:focus {
+  outline: none;
+}
+
+.prompt-title {
+  color: var(--prompt);
+  padding: 0.5em 0em;
+}
+
+.prompt-cursor {
+  color: var(--cursor);
+  margin-left: 0.5em;
+}
+
+.prompt-text {
+  padding: 0.5em;
+  flex-grow: 1;
+}
+
+/**
+* Terminal Output generic styles
+*/
+
+.terminal-output {
+  margin: 0.5em 0em;
+}
+
+.default-list {
+  margin: 0px;
+  padding: 0em 0em;
+}
+
+/**
+* LS Command Styling
+*/
+
+.ls-list {
+  list-style: none;
+  margin: 0px;
+  padding: 0px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.ls-item {
+  padding: 0em 0.5em;
+}
+
+.ls-item.directory {
+  color: var(--directory);
+}
+
+/**
+* Tree Command Styling
+*/
+
+.tree-list {
+  margin: 0px;
+  padding: 0em 0em 0em 0.5em;
+  list-style: none;
+}
+
+.tree-list-item {
+  color: var(--fg);
+  position: relative;
+  padding: 0.25em 0em 0em 0.1em;
+}
+
+.tree-list-item::before,
+.tree-list-item::after {
+  content: "";
+  position: absolute;
+  left: -0.8rem;
+}
+
+.tree-list-item::before {
+  border-top: 1px solid var(--tree);
+  top: 0.8em;
+  width: 0.75em;
+}
+
+.tree-list-item::after {
+  border-left: 1px solid var(--tree);
+  height: 100%;
+  top: 0.3em;
+}
+
+.tree-list-item:last-child::after {
+  /* Create the right angle on the last child */
+  height: 0.5em;
+}
+
+.tree-list-item.directory {
+  color: var(--directory);
 }
 
 img {
